--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.5.3
   jwt_decoder: ^2.0.1
   go_router: ^16.0.0
   dio: ^5.8.0+1
